# ChangeLog for dev-util/gquilt
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gquilt/ChangeLog,v 1.16 2009/04/25 21:35:37 patrick Exp $

  02 May 2009; jnrowe@gmail.com +gquilt-0.18.ebuild, gquilt-0.19.ebuild,
  gquilt-0.20.ebuild, gquilt-0.21.ebuild, metadata.xml:
  gquilt can use Mercurial instead of quilt [196523].

  25 Apr 2009; Patrick Lauer <patrick@gentoo.org> gquilt-0.21:
  Fixing badly broken prerm to be postrm. Fixes #250576

*gquilt-0.21 (25 Apr 2009)

  25 Apr 2009; Patrick Lauer <patrick@gentoo.org> +gquilt-0.21.ebuild:
  Bump to 0.21, fixes #266427

  17 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org> gquilt-0.20.ebuild:
  fix python eclass use, bug #207667

*gquilt-0.19 (05 Apr 2007)
*gquilt-0.18 (05 Apr 2007)

  05 Apr 2007; Steve Arnold <nerdboy@gentoo.org> -gquilt-0.14.ebuild,
  -gquilt-0.15.ebuild, +gquilt-0.18.ebuild, +gquilt-0.19.ebuild,
  +gquilt-0.20.ebuild:
  correction: removed older broken versions completely; they didn't work
  at all, so only the latest from sourceforge that actually work...

*gquilt-0.20 (05 Apr 2007)

  05 Apr 2007; Steve Arnold <nerdboy@gentoo.org> gquilt-0.14.ebuild,
  gquilt-0.15.ebuild, +gquilt-0.20.ebuild:
  Update for bugs 128244 and 111428 (added latest upstream release and
  fixed symlink issue in existing versions).  Should stablize on 0.20.

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*gquilt-0.15 (03 Nov 2005)

  03 Nov 2005; Aaron Walker <ka0ttic@gentoo.org> -gquilt-0.12.ebuild,
  +gquilt-0.15.ebuild:
  Version bump.

*gquilt-0.14 (14 Sep 2005)

  14 Sep 2005; Aaron Walker <ka0ttic@gentoo.org> -gquilt-0.11.ebuild,
  +gquilt-0.14.ebuild:
  Version bump; tidy old ebuild.

  22 Aug 2005; Luis Medinas <metalgod@gentoo.org> gquilt-0.12.ebuild: