@@ -1,20 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST gquilt-0.18.tar.gz 55342 RMD160 fc9364d2819ac455f8f71b87007f6d40da11c646 SHA1 fb8d386666052e0078987f2a80ab41bdde25f56c SHA256 d7cafadc81ed718654fec2f6d1bee258aa0fd89097508430223463964322ecfb
-DIST gquilt-0.19.tar.gz 55543 RMD160 b2c2485ddfb727d31cab9d3efaad92fbfa4b8b28 SHA1 a651d74ee5efdc52a0148cdfb094cb0102c8f540 SHA256 104370ec9c7bba7547cfa2bb6a60241b256c25e02cfd40d38c062cdaca8c164d
-DIST gquilt-0.20.tar.gz 56738 RMD160 a29ec1b095558b343c6fd55ca0f0321dd3a3051b SHA1 a5c515d302764a125daacb186200fc493b0dcda2 SHA256 8f43278e069848f025f84f898b34ca2a4b340f08fad8b8d800f375113abe19ae
 DIST gquilt-0.21.tar.gz 59270 RMD160 17eab5c884ca3bf5d948a281175b25b9b57694c8 SHA1 89b521549458c957d2fb6b7910763d398895c0d5 SHA256 424fea8cb3421ddeb8740b020b5f5ae408ecd346769d9fa2efa6f5aac161f978
-EBUILD gquilt-0.18.ebuild 641 RMD160 29871d4694d9b9c2349f1b3ad9033137d9483797 SHA1 c684103c3fc7920ff36191af05fd8f7b4bfb92ee SHA256 abd21de135141940148b29ff29172a4184b9604803eaf5de6758ab0ad19f064d
-EBUILD gquilt-0.19.ebuild 641 RMD160 0713526df4429095eecdae0ce925a103f4590105 SHA1 0d04ce8e776bdaba82fad1176162af51eb5b42b7 SHA256 460d8815f69b1cb3dd3ba7a2d714d81e4e16ee5be19019f6ff67b13a6e08d354
-EBUILD gquilt-0.20.ebuild 1061 RMD160 b40afc431a596f1cc48a50b97cc6dc8cea31ce9c SHA1 fbd674bdf90d808b47373555ab539450e1a54350 SHA256 c3327c2cff114b965159a285beb3bb2a0a584e3a7ad10fe882392148f55fac65
 EBUILD gquilt-0.21.ebuild 1060 RMD160 f8a46841f5891d65e8f84e772d8086fba685c37d SHA1 2814a4835d63f92766b5876f7ed145db29a011f2 SHA256 5eb05b8f57386f648891665a078165d44d17a6dec16d6708d7c3959addb7f050
-MISC ChangeLog 3060 RMD160 e5bbc2bb5afca5f268724c0eace76b8ccaece901 SHA1 a45bf9209582803d4dded17ca56b0be7f0eca0f3 SHA256 83867773cd5f709cef5f5d248d9b86f8c0bc56faba47fab7e5d3bd5d52bae193
+MISC ChangeLog 3196 RMD160 cec6740f65018de7ba500a1e7b07e93017796dbe SHA1 e34b60f090428495566738e90b512c82390205d1 SHA256 812a83676340476a9f5d3c8ea970be98e51a5944f0f1a1225421fcb02ce84a74
 MISC metadata.xml 257 RMD160 fe9fa90d8603ef0b613417b643f1fc79e4d495e2 SHA1 1a9e4dd72562d266b38995cda84506dffcf54964 SHA256 0139906c0783a6ac7151c524b397ff05d52330e3dfb130fad4c9e53848436313
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkocZ14ACgkQzJrj3cAXR0nCSACePldFRh/rHd1O5m9L9tz606h0
-1rcAn2b104U23d0UokvfqCWyabNshG9A
-=z9Oh
+iEYEARECAAYFAkweL+cACgkQzJrj3cAXR0lzTwCglWqTK2WRJSsqGdP+7PZFC30w
+Z/UAoLh8nW1HjUoDOd/xfayQ/bEBjKXA
+=llNK
 -----END PGP SIGNATURE-----
