@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20091230
-|| ( dev-util/quilt dev-util/mercurial ) >=dev-python/pygtk-2 >=app-admin/eselect-python-20091230
-0
-mirror://sourceforge/gquilt/gquilt-0.20.tar.gz
-
-http://users.bigpond.net.au/Peter-Williams/
-GPL-2
-A Python/GTK wrapper for quilt and Mercurial's mq extension
-~amd64 ~ppc ~x86
-multilib python toolchain-funcs
-
-
-
-
-
-
-install postinst prerm unpack
-
-
-
-
-
